Fixed the gap at the top of the page

--- a/index-style.css
+++ b/index-style.css
@@ -1,4 +1,4 @@
-html , body {
+* {
     width: 100%;
     margin: 0;
 	padding: 0;
@@ -16,12 +16,14 @@ html , body {
     text-align: center;
     color: whitesmoke;
     min-width: 100%;
+    height: 300px;
 }
 .menu-bar h1 {
     font-size: 70px;
     z-index: 1;
 }
 .menu-bar ul {
+    margin-top: 180px;
     padding: 10px;
     background: rgba(0 , 0 , 0 , 0.5);
     z-index: 1;
